--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<p>Hello, world, I'm Xiao Fan.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="margin: 0%;">
+    <div style="
+        background-color: lightgrey;
+        text-align: center;
+        padding: 40px;">
+        <img src="./icon.jpeg" alt="大猫炖" height="80" width="80">
+    </div>
+    <div style="
+        max-width: 700px;
+        margin: 30px auto;
+        padding: 15px;">
+        <p>我是奶茶不睡觉</p>
+        <p>奶茶是我的猫，它不睡觉的时候很皮</p>
+        <p>希望它能一直这么皮</p>
+    </div>
+    <div style="
+        background-color: lightgrey;
+        text-align: center;
+        padding: 40px;">
+        <p>奶茶不睡觉</p>
+    </div>
+</body>
+</html>
