--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         text-align: center;
         padding: 40px;">
         <p>奶茶不睡觉</p>
+        <a href="https://noxiaofan.github.io/">点我</a>
     </div>
 </body>
 </html>
